cmake_minimum_required(VERSION 3.21)
set(CMAKE_C_STANDARD 99)
if (DebugStringRemover MATCHES "_driver$")
    project(FindWdk)
    set_property(GLOBAL PROPERTY USE_FOLDERS ON)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /WX")
    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../cmake")
    find_package(WDK REQUIRED)
    wdk_add_driver(DebugStringRemover main.c)
else ()
    project(DebugStringRemover C)
    add_executable(DebugStringRemover main.c)
endif (DebugStringRemover MATCHES "_driver$")
